dist/test/tipe-data.test.js
"use strict";
describe("Data Type", function () {
    it('should must declare', function () {
        let name = "Muhammad Bintang";
        let balance = 100000;
        let isVip = true;
        console.info(name);
        console.info(balance);
        console.info(isVip);
        // name = 1; // error
        // balance "1000"; // error
        // isVip = 1; // error
    });
});
